--- a/UserRoles/Views/Order/CusDetails.cshtml
+++ b/UserRoles/Views/Order/CusDetails.cshtml
@@ -224,7 +224,7 @@
                     @Model.CustomerName @Model.Surname<br />
                     @Model.CustomerPhone<br />
                     @Model.Email<br >
-                    @Model.Address
+                    @*@Model.Address*@
                 </td>
 
                 <td>
