--- a/UserRoles/Views/Shared/_AdminNavbar.cshtml
+++ b/UserRoles/Views/Shared/_AdminNavbar.cshtml
@@ -121,7 +121,9 @@
 
                                 <li><a class="hvr-sweep-to-right" href="/Home/Camera">Scanner</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/AdminIndex">All Orders</a></li>
-                                <li><a class="hvr-sweep-to-right" href="/Order/Collectnew">New Collection Orders</a></li>
+                                <li><a class="hvr-sweep-to-right" href="/Order/Index">New Orders</a></li>
+                                @*<li><a class="hvr-sweep-to-right" href="/Order/AdminIndex">All Orders</a></li>
+        <li><a class="hvr-sweep-to-right" href="/Order/Collectnew">New Collection Orders</a></li>*@
                                 <li><a class="hvr-sweep-to-right" href="/Order/DeliveryNew">New Delivery Orders</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/Seen">Seen</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/CusToPickUp">Customer To Collect</a></li>
